@@ -202,7 +202,7 @@ public class TasksPage extends Page<TasksPage> {
     public String getFirstRowTaskTitle() {
         List<String> taskTitles = getTableDataByColumn(taskTable, 1);
         if (!taskTitles.isEmpty()) {
-            return taskTitles.get(0);
+            return taskTitles.getFirst();
         }
         return "";
     }
